--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 Data Preparation/check.gdx
 Data Preparation/Data.gdx
 2. Data_Preparation_IEEE33/Data Preparation/Data.gdx
+*.log
+3. Model Congestion Management/winter/~$VL_Data_w_lpv_01.xlsx
+*.log~3
+*.log~2
+*.log~1
