--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Data Preparation/Data.gdx
 2. Data_Preparation_IEEE33/Data.gdx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
+2. Data_Preparation_IEEE33/Load_deviation_data.gdx
