--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ Data Preparation/Data.gdx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
+1. Model Dispatch/1. case33.gms
+Smart_meter_data_sort/Merge SM data to IEEE 33/Combined_2021.xlsx
