--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Data Preparation/Data.gdx
 Smart_meter_data_sort/Merge SM data to IEEE 33/Combined_2021.xlsx
 Smart_meter_data_sort/combined_df.xlsx
 Smart_meter_data_sort/combined_df_2021.xlsx
+*.gdx
