--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,17 @@ Smart_meter_data_sort/Merge SM data to IEEE 33/Combined_2021.xlsx
 Smart_meter_data_sort/combined_df.xlsx
 Smart_meter_data_sort/combined_df_2021.xlsx
 *.gdx
+*.lst
+1. Model Dispatch/1. case33.lst
+2. Data_Preparation_IEEE33/PF_Grid_SLP/PF_Data_SLP.xlsx
+2. Data_Preparation_IEEE33/load_deviation_SLP.xlsx
+2. Data_Preparation_IEEE33/VL_Grid_SLP/VL_Data_SLP.xlsx
+2. Data_Preparation_IEEE33/load_deviation_SLP.xlsx
+*.lxi
+*.gdx
+*.lst
+*.gdx
+2. Data_Preparation_IEEE33/Load_deviation_data.gdx
+2. Data_Preparation_IEEE33/Load_deviation_data.gdx
+*.gdx
+2. Data_Preparation_IEEE33/Data Preparation/check.gdx
