--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ Smart_meter_data_sort/combined_df_2021.xlsx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
 *.gdx
 2. Data_Preparation_IEEE33/Data Preparation/check.gdx
+*.gdx
+2. Data_Preparation_IEEE33/Data Preparation/check.gdx
+2. Data_Preparation_IEEE33/Load_deviation_data.gdx
