--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ Smart_meter_data_sort/combined_df_2021.xlsx
 *.gdx
 2. Data_Preparation_IEEE33/Data Preparation/check.gdx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
+2. Data_Preparation_IEEE33/Load_deviation_data.gdx
+2. Data_Preparation_IEEE33/load_deviation_SLP.xlsx
