--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ Smart_meter_data_sort/combined_df_2021.xlsx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
 2. Data_Preparation_IEEE33/load_deviation_SLP.xlsx
+2. Data_Preparation_IEEE33/load_deviation_SLP.xlsx
+2. Data_Preparation_IEEE33/load_deviation_SLP.xlsx
