--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ Smart_meter_data_sort/combined_df_2021.xlsx
 2. Data_Preparation_IEEE33/load_deviation_SLP.xlsx
 2. Data_Preparation_IEEE33/load_deviation_SLP.xlsx
 2. Data_Preparation_IEEE33/load_deviation_SLP.xlsx
+*.gdx
+2. Data_Preparation_IEEE33/Load_deviation_data.gdx
