--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ Smart_meter_data_sort/combined_df_2021.xlsx
 2. Data_Preparation_IEEE33/load_deviation_SLP.xlsx
 *.gdx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
+Smart_meter_data_sort/.ipynb_checkpoints/Estimate Error Distribution SM data from SLP-checkpoint.ipynb
