--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ Smart_meter_data_sort/combined_df_2021.xlsx
 *.gdx
 2. Data_Preparation_IEEE33/Load_deviation_data.gdx
 Smart_meter_data_sort/.ipynb_checkpoints/Estimate Error Distribution SM data from SLP-checkpoint.ipynb
+Visualization Results/.ipynb_checkpoints/Congestion Management Costs-checkpoint.ipynb
+Visualization Results/.ipynb_checkpoints/Congestion Management Costs-checkpoint.ipynb
+*.ipynb
+*.ipynb
+*.ipynb
